--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/Imagen"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/add_grupo6" />
+            android:src="@drawable/calendario_grupo6" />
 
         <TextView
             android:id="@+id/AppTitulo"
