--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp"
-    android:background="#E0EEF1"
+    android:padding="16dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
-        android:id="@+id/OrientacionHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/Imagen"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/calendario_grupo6" />
-
-        <TextView
-            android:id="@+id/AppTitulo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="#A2E7F1"
-            android:text="Activity List"
-            android:textColor="#0F27AC"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/Titulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        android:text="Crie Sua Tarefa :"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="italic" />
-
     <EditText
-        android:id="@+id/Digita"
+        android:id="@+id/taskInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Escreva"
-        android:inputType="text" />
+        android:hint="Nueva Tarea" />
 
     <Button
-        android:id="@+id/Button1"
+        android:id="@+id/addButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="#A2E7F1"
-        android:drawableEnd="@drawable/add_grupo6"
-        android:text="Add"
-        android:textColor="#0F27AC"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:text="Adicionar Tarefa" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+</LinearLayout>
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
