--- a/app/src/main/res/layout/fragment_pantalla2.xml
+++ b/app/src/main/res/layout/fragment_pantalla2.xml
@@ -21,7 +21,7 @@
         android:text="METAS PARA A MINHA SEMANA :"/>
 
     <EditText
-        android:id="@+id/entradaDeTarea"
+        android:id="@+id/entradaDeTarefa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
