cambio linha 97 de fragmento1

--- a/app/src/main/res/layout/fragment_pantalla1.xml
+++ b/app/src/main/res/layout/fragment_pantalla1.xml
@@ -94,7 +94,7 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:textColor="@color/black"
-        android:text="Bienvenido!"
+        android:text="Bem-Vindo!"
         android:textStyle="bold"
         android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
