--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="laranja">#F2B907</color>
+    <color name="laranja_medio">#E8DD7B</color>
+    <color name="laraja_melon200">#F1E3B6</color>
+
 </resources>
