--- a/app/src/main/res/layout/fragment_pantalla1.xml
+++ b/app/src/main/res/layout/fragment_pantalla1.xml
@@ -4,103 +4,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1E3B6"
     android:layout_margin="16dp"
+    android:background="#F1E3B6"
     android:padding="16dp"
     tools:context=".Pantalla1Fragment">
 
-    <View
-        android:id="@+id/vista"
-        android:layout_width="120dp"
-        android:layout_height="2dp"
-        android:layout_below="@id/textList1"
-        android:background="#FF9800"
-        android:elevation="10dp"
-        app:layout_constraintTop_toBottomOf="@id/textList1"
-        app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/tituloPrimeraTela"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="#E8DD7B"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:text="@string/bem_vindo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textList1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ListView:"
         android:textColor="@color/black"
+        android:textSize="30sp"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:text="@string/list_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontal" />
 
+    <View
+        android:id="@+id/vista"
+        android:layout_width="120dp"
+        android:layout_height="2dp"
+        android:background="#F2B907"
+        android:elevation="10dp"
+        android:layout_below="@id/textList1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textList1" />
+
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imagem"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/imagen_list"
-        app:layout_constraintBottom_toTopOf="@id/imageButtonEntrar"
-        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintBottom_toTopOf="@id/buttonImagem"
+        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontal" />
 
-
-    <RadioButton
-        android:id="@+id/radioButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#E8DD7B"
-        android:text="Aprenda"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
-
-
     <RadioButton
         android:id="@+id/radioButton1"
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:layout_marginTop="20dp"
         android:background="#E8DD7B"
-        android:text="Use"
+        android:textSize="30sp"
+        android:text="@string/use"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
         app:layout_constraintTop_toBottomOf="@+id/vista" />
-
 
     <RadioButton
         android:id="@+id/radioButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#E8DD7B"
-        android:textSize="30dp"
-        android:text="Entenda"
+        android:textSize="30sp"
+        android:text="@string/entenda"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
         app:layout_constraintTop_toBottomOf="@+id/radioButton1" />
 
+    <RadioButton
+        android:id="@+id/radioButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#E8DD7B"
+        android:textSize="30sp"
+        android:text="@string/aprenda"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guidelineVertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="165dp" />
-
-    <TextView
-        android:id="@+id/textTitulo"
-        android:background="#E8DD7B"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:text="Bem-vindo!"
-        android:textStyle="bold"
-        android:textSize="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
@@ -110,13 +105,14 @@
         app:layout_constraintGuide_end="445dp" />
 
     <ImageButton
-        android:id="@+id/imageButtonEntrar"
+        android:id="@+id/buttonImagem"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:src="@drawable/download"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
