--- a/app/src/main/res/layout/fragment_pantalla2.xml
+++ b/app/src/main/res/layout/fragment_pantalla2.xml
@@ -10,15 +10,12 @@
     tools:context=".MainActivity">
 
     <TextView
+        style="@style/MainTitle"
         android:id="@+id/Titulo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/black"
-        android:textSize="20dp"
         android:layout_gravity="center_horizontal"
         android:textStyle="italic"
-        android:text="METAS PARA A MINHA SEMANA :"/>
+        android:text="@string/metas_para_a_minha_semana" />
 
     <EditText
         android:id="@+id/entradaDeTarefa"
@@ -28,13 +25,10 @@
         android:hint="Nova Tarefa" />
 
     <Button
+        style="@style/MainTitle"
         android:id="@+id/addButton"
         android:drawableEnd="@drawable/add_grupo6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/black"
-        android:textSize="20dp"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="#F2B907"
         android:text="Adicionar Tarefa" />
@@ -45,4 +39,5 @@
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
         android:layout_weight="1" />
+
 </LinearLayout>
