--- a/app/src/main/res/layout/fragment_pantalla2.xml
+++ b/app/src/main/res/layout/fragment_pantalla2.xml
@@ -7,33 +7,20 @@
 
     <TextView
         style="@style/MainTitle"
-        android:id="@+id/Titulo"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textStyle="italic"
-        android:text="@string/metas_para_a_minha_semana" />
+        android:id="@+id/Titulo" />
 
     <EditText
-        android:id="@+id/entradaDeTarefa"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Nova Tarefa" />
+        style="@style/editNovaTarefa"
+        android:id="@+id/entradaDeTarefa" />
 
     <Button
-        style="@style/MainTitle"
+        style="@style/addButton2"
         android:id="@+id/addButton"
         android:drawableEnd="@drawable/add_grupo6"
-        android:layout_width="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:backgroundTint="#F2B907"
-        android:text="Adicionar Tarefa" />
+        android:layout_marginHorizontal="20dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="30dp"
-        android:layout_weight="1" />
+        style="@style/recycleItem"
+        android:id="@+id/recyclerView" />
 
 </LinearLayout>
