--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -94,7 +94,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">30dp</item>
-        <item name="android:hint">Nova Tarefa</item>
+        <item name="android:hint">@string/nova_tarefa</item>
     </style>
 
     <style name="addButton2">
@@ -104,7 +104,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:backgroundTint">#F2B907</item>
-        <item name="android:text">Adicionar Tarefa</item>
+        <item name="android:text">@string/add_tarefa</item>
     </style>
 
     <style name="recycleItem">
