--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
     <style name="Base.Theme.LISTADEPROYECTO" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">#7C0990</item>
+        <item name="android:background">#A7B6D0</item>
+
     </style>
 
     <style name="Theme.LISTADEPROYECTO" parent="Base.Theme.LISTADEPROYECTO" />
