cambios de colores

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="laranja">#F2B907</color>
-    <color name="laranja_medio">#E8DD7B</color>
-    <color name="laraja_melon200">#F1E3B6</color>
+    <color name="laranja">#FF9800</color>
+    <color name="laranja_medio">#FFC107</color>
+    <color name="laranja_melon200">#DBC789</color>
 
 </resources>
