--- a/app/src/main/res/layout/fragment_pantalla2.xml
+++ b/app/src/main/res/layout/fragment_pantalla2.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/laraja_melon200"
+    android:background="@color/laranja_melon200"
     android:orientation="vertical"
     android:padding="@dimen/padding_principal2"
     tools:context=".MainActivity">
