--- a/app/src/main/res/layout/fragment_pantalla1.xml
+++ b/app/src/main/res/layout/fragment_pantalla1.xml
@@ -1,122 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#F1E3B6"
     android:layout_margin="16dp"
-    android:padding="16dp"
     tools:context=".Pantalla1Fragment">
 
-    <View
-        android:id="@+id/vista"
-        android:layout_width="120dp"
-        android:layout_height="2dp"
-        android:layout_below="@id/textList1"
-        android:background="#FF9800"
-        android:elevation="10dp"
-        app:layout_constraintTop_toBottomOf="@id/textList1"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-    <TextView
-        android:id="@+id/textList1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ListView:"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/imagen_list"
-        app:layout_constraintBottom_toTopOf="@id/imageButtonEntrar"
-        app:layout_constraintEnd_toEndOf="@id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal" />
-
-
-    <RadioButton
-        android:id="@+id/radioButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#E8DD7B"
-        android:text="Aprenda"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
-
-
-    <RadioButton
-        android:id="@+id/radioButton1"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:background="#E8DD7B"
-        android:text="Use"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/vista" />
-
-
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#E8DD7B"
-        android:textSize="30dp"
-        android:text="Entenda"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />
-
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="165dp" />
+        android:layout_height="wrap_content"
+        android:background="#FBC725"
+        android:padding="10dp"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hola!"
+            android:textSize="40sp"
+            />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textTitulo"
-        android:background="#E8DD7B"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:text="Bienvenido!"
-        android:textStyle="bold"
-        android:textSize="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="Pesquise a sua tarefa"
+        android:layout_margin="10dp"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:id="@+id/layDois"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
+        android:orientation="vertical"
+        android:background="@drawable/img_principal"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        >
+    </LinearLayout>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHorizontal"
-        android:layout_width="wrap_content"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="445dp" />
+        android:backgroundTint="#FBC725"
+        android:layout_marginTop="130dp"
+        android:src="@drawable/add_butom"
+        android:layout_marginLeft="300dp"
+        >
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
-    <ImageButton
-        android:id="@+id/imageButtonEntrar"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:src="@drawable/download"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
