--- a/app/src/main/res/layout/fragment_pantalla2.xml
+++ b/app/src/main/res/layout/fragment_pantalla2.xml
@@ -4,7 +4,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
     android:background="#F1E3B6"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -13,36 +12,89 @@
         android:id="@+id/Titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="30dp"
+        android:layout_margin="5dp"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:textStyle="italic"
-        android:text="METAS PARA A MINHA SEMANA :"/>
+        android:fontFamily="casual"
+        android:text="Tarea de registro"
+        />
 
-    <EditText
-        android:id="@+id/entradaDeTarea"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Nova Tarefa" />
-
-    <Button
-        android:id="@+id/addButton"
-        android:drawableEnd="@drawable/add_grupo6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:textColor="@color/black"
         android:textSize="20dp"
-        android:layout_marginHorizontal="20dp"
-        android:backgroundTint="#F2B907"
-        android:text="Adicionar Tarefa" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:layout_margin="5dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="30dp"
+        android:text="Nombre de la tarea"
+        />
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="30dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:hint="Nome da tarefa"
+        android:layout_margin="10dp"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_marginVertical="10dp"
+            android:background="@color/white"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:layout_margin="5dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="30dp"
+        android:text="Descripción de la tarea"
+        />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_marginVertical="10dp"
+            android:background="@color/white"
+            android:layout_height="80dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:text="Cancelar"
+            android:backgroundTint="#FBC725"
+            android:textColor="@color/black"
+            android:layout_marginHorizontal="10dp"
+            />
+
+        <Button
+            android:layout_width="110dp"
+            android:backgroundTint="#FBC725"
+            android:layout_height="wrap_content"
+            android:text="agregar"
+            android:textColor="@color/black"
+            android:layout_marginHorizontal="10dp"
+            />
+    </LinearLayout>
+
 </LinearLayout>
